--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "lib": [
       "es2018",
       "dom",
-      "es2017"
+      "es2017",
+      "dom.iterable"
     ]
   },
   "angularCompilerOptions": {
