--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/disableTimer.js"
+            ]
           },
           "configurations": {
             "production": {
